syntax = "proto3";

package messages.request;

message Request {
    RequestType type = 1;
    string user_id = 2;
    string client_id = 3;
    repeated string data = 4;
    bool from_client = 5;
    string token_id = 6;
    oneof detailed_type {
        AuthenticateType auth = 10;
        TransactionType transaction = 11;
        AccountType account = 12;
        MiscType misc = 13;
        ResultType result = 14;
    }


    enum RequestType {
        SHUTDOWN = 0;
        AUTHENTICATE = 1;
        TRANSACTIONS = 2;
        ACCOUNT = 3;
        MISC = 4;
        Result=5;
    }
    enum AuthenticateType {
        LOGIN = 0;
        NEW_USER = 1;
        CHANGE_PASSWORD = 2;
        LOGOUT=3;
    }
    enum TransactionType {
        LIST_TRANSACTIONS = 0;
        TRANSACTION_INFO = 1;
        NEW_TRANSACTION = 2;
    }

    enum AccountType {
        LIST_ACCOUNTS = 0;
        ACCOUNT_INFO = 1;
        NEW_ACCOUNT = 2;
    }
    enum MiscType {
        UNKNOWN = 0;
        NEW_CLIENT=1;
    }
    enum ResultType {
        SUCCESS = 0;
        INVALID_ARGS=1;
        UNEXPECTED_ERROR=2;
        NOT_AUTHENTICATED=3;
    }
}
